Realign page content and fix footer links

--- a/src/assets/styles/components/footer.css
+++ b/src/assets/styles/components/footer.css
@@ -65,7 +65,8 @@ footer {
 		}
 	}
 
-	a {
+	a,
+	.footer-bottom a {
 		color: light-dark(var(--magenta), var(--yellow));
 		text-decoration: none;
 
@@ -74,7 +75,7 @@ footer {
 			opacity: 0.6;
 		}
 
-		&:after {
+		&::after {
 			display: none;
 		}
 	}
